--- a/index.html
+++ b/index.html
@@ -96,6 +96,6 @@
 
     
 
-    <p style="width: 100%; text-align: center; background-color: rgb(20, 20, 20); padding: 1%; color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Developed by M Saad</p>
+    <p style="width: 100%; text-align: center; padding-top: 20px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Developed by M Saad</p>
 </body>
 </html>
