--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </iframe>
     <hr>
 
-    <h4>Episode 8</h4>
+    <h4>Episode 8 - Last Episode</h4>
     <iframe
         frameborder="0"
         width="480"
