--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         allow="autoplay">
     </iframe>
 
-    
+    <h3> season 2 coming soon... </h3>
 
     <p style="width: 100%; text-align: center; padding-top: 20px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Developed by M Saad</p>
 </body>
