--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asur Season 1</title>
+    <style>
+        iframe {
+            width: 480px;
+            height: 270px;
+        }
+
+        @media (max-width: 600px) {
+            iframe {
+                width: 100%;
+                height: auto;
+            }
+        }
+    </style>
 </head>
 <body>
     <h1>Asur Season 1</h1>
     <h4>Episode 1</h4>
     <iframe
         frameborder="0"
-        width="480"
-        height="270"
         src="https://www.dailymotion.com/embed/video/x87blxo"
         allowfullscreen
         allow="autoplay">
@@ -21,8 +32,6 @@
     <h4>Episode 2</h4>
     <iframe
         frameborder="0"
-        width="480"
-        height="270"
         src="https://www.dailymotion.com/embed/video/x90xuni"
         allowfullscreen
         allow="autoplay">
@@ -32,8 +41,6 @@
     <h4>Episode 3</h4>
     <iframe
         frameborder="0"
-        width="480"
-        height="270"
         src="https://www.dailymotion.com/embed/video/x90xxrk"
         allowfullscreen
         allow="autoplay">
@@ -43,8 +50,6 @@
     <h4>Episode 4</h4>
     <iframe
         frameborder="0"
-        width="480"
-        height="270"
         src="https://www.dailymotion.com/embed/video/x90y1mo"
         allowfullscreen
         allow="autoplay">
@@ -54,8 +59,6 @@
     <h4>Episode 5</h4>
     <iframe
         frameborder="0"
-        width="480"
-        height="270"
         src="https://www.dailymotion.com/embed/video/x90zyny"
         allowfullscreen
         allow="autoplay">
@@ -65,8 +68,6 @@
     <h4>Episode 6</h4>
     <iframe
         frameborder="0"
-        width="480"
-        height="270"
         src="https://www.dailymotion.com/embed/video/x9100rg"
         allowfullscreen
         allow="autoplay">
@@ -76,8 +77,6 @@
     <h4>Episode 7</h4>
     <iframe
         frameborder="0"
-        width="480"
-        height="270"
         src="https://www.dailymotion.com/embed/video/x9106om"
         allowfullscreen
         allow="autoplay">
@@ -87,14 +86,19 @@
     <h4>Episode 8 - Last Episode</h4>
     <iframe
         frameborder="0"
-        width="480"
-        height="270"
         src="https://www.dailymotion.com/embed/video/x910bta"
         allowfullscreen
         allow="autoplay">
     </iframe>
+    <hr>
 
-    <h3> season 2 coming soon... </h3>
+    <div style="display: flex; align-items: center;">
+        <a href="https://play.google.com/store/apps/details?id=org.adblockplus.browser">Click to get recommended Add Bloker Browser APK</a>
+        <img style="width: 50px;" src="addb.jfif" alt="Add bloker Browser" srcset="">
+    </div>
+    <br> <br>
+    <a href="https://flixhq.bz/tv/asur-welcome-to-your-dark-side-j246y/2-1">Visit site to watch ASUR - Season 2</a>
+
 
     <p style="width: 100%; text-align: center; padding-top: 20px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Developed by M Saad</p>
 </body>
