--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
     <a href="https://flixhq.bz/tv/asur-welcome-to-your-dark-side-j246y/2-1">Visit site to watch ASUR - Season 2</a>
 
 
-    <p style="width: 100%; text-align: center; padding: 10px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; background-color: grey;"><a style="color: black;" href="https://m-saad.netlify.app/">Developed by M Saad</a></p>
+    <p style="margin-left: -15px; width: 100%; text-align: center; padding: 10px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; background-color: grey;"><a style="color: black;" href="https://m-saad.netlify.app/">Developed by M Saad</a></p>
 </body>
 </html>
